---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: ????
  Info:
    - Drop initial skin
    - Switch from accumulator earrape to recycler noises
    - Shift the texture up a little bit
    - Make recipe self starting and drop upper quality support
---------------------------------------------------------------------------------------------------
Version: 1.2.7
Date: 2025. 05. 18
  Info:
    - Fix invalid LuaEntity @ control.lua:324
---------------------------------------------------------------------------------------------------
Version: 1.2.6
Date: 2025. 05. 14
  Info:
    - Unify mining times
    - Fix a small chance of the inactivity timer going out of bounds
---------------------------------------------------------------------------------------------------
Version: 1.2.5
Date: 2025. 04. 24
  Info:
    - Prevent the condenser getting stuck on 100% quality
---------------------------------------------------------------------------------------------------
Version: 1.2.4
Date: 2025. 04. 04
  Info:
    - Sum spoil percentages for that quality only
    - add CN translation (#33)
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 2025. 03. 31
  Info:
    - Fix condenser not having tabs on newly created worlds
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 2025. 03. 30
  Info:
    - Fix migration running on newly created worlds
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2025. 03. 28
  Info:
    - Require science packs instead of only time
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2025. 03. 26
  Info:
    - Require 2.0.38 for the proxy container (inventory can now be read with wires)