@@ -18,7 +18,7 @@ quality-condenser--technology-effects=technology-a-name=10,technology-b-name=-20
 quality-condenser--energy-usage=Temporary setting, do not get too attached.
 
 [recipe-name]
-quality-condenser--recipe=Quality condensing
+quality-condenser--recipe=Quality condenser
 
 [technology-name]
 quality-condenser=Quality condenser
