@@ -3,18 +3,14 @@ local recipe_category = {
   name = mod_prefix .. "recipe-category",
 }
 
-local seconds = 2 -- math constant
-
 local recipe = {
   type = "recipe",
   name = mod_prefix .. "recipe",
-  -- icon = mod_directory .. "/graphics/research-center/research-center-icon.png",
-  icon = mod_directory .. "/graphics/icons/recipe.png",
-  icon_size = 144,
+  icon = mod_directory .. "/graphics/research-center/research-center-icon.png",
   category = recipe_category.name,
   enabled = true,
   auto_recycle = false,
-  energy_required = 10 * seconds,
+  energy_required = 10,
   ingredients = {},
   results = {},
   hide_from_player_crafting = true,
