@@ -6,6 +6,7 @@ Date: ????
     - Switch from accumulator earrape to recycler noises
     - Shift the texture up a little bit
     - Make recipe self starting and drop upper quality support
+    - Make them searchable on the map and only take 10 seconds
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.7
 Date: 2025. 05. 18
